Fix DIGEST-MD5 logging